fix: fixed text overflowing on animation title

--- a/src/styles/Style.scss
+++ b/src/styles/Style.scss
@@ -75,7 +75,7 @@ footer {
 
 .loading-container .transition-words .wrap > * {
    position: relative;
-   white-space: nowrap;
+   white-space: normal;
    line-height: 1;
    padding: 0.1em 0;
    text-align: center;
